# spark-signals

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.planning/: ARCHITECTURE.md  AUDIT-2026-01-24.md  MEMORY-LIFECYCLE-FIXES.md  PROGRESS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benches/: signals.rs
src/: lib.rs  macros.rs
src/collections/: map.rs  mod.rs  set.rs  vec.rs
src/core/: constants.rs  context.rs  mod.rs  types.rs
src/primitives/: bind.rs  derived.rs  effect.rs  linked.rs  mod.rs  props.rs  repeater.rs  scope.rs  selector.rs  signal.rs  slot.rs
src/reactivity/: batching.rs  equality.rs  mod.rs  scheduling.rs  tracking.rs
src/shared/: mod.rs  notify.rs  shared_slot_buffer.rs
tests/: clean_syntax.rs  ergonomics.rs  lifecycle_drop.rs  macro_showcase.rs  prop_syntax.rs
